<resources>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about">About</string>
    <string name="add_comment_placeholder">Comment</string>
    <string name="add_item_placeholder">Add</string>
    <string name="also_delete_file">Also delete file on the filesystem</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_link">https://play.google.com/store/apps/details?id=com.lolo.io.onelist</string>
    <string name="app_name">1List</string>
    <string name="app_version">App Version</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="backup_all_lists">Backup all lists</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="build_config">Q1lXUntiYXNlNjRfYnVpbGRfY29uZmlnX2ZvdW5kfQ==</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="clear_list">Just clear list</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="com.google.firebase.crashlytics.mapping_file_id">96915aec10b74c13b39bc5b8bedff19f</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="continue_button">Continue</string>
    <string name="copy">Copy</string>
    <string name="ctf_flag_1">CYWR{welcome_to_onelist_ctf}</string>
    <string name="default_popup_window_title">Pop-Up Window</string>
    <string name="default_web_client_id">684266647785-tgpsiu0toobcgmj264jraudguapv3cco.apps.googleusercontent.com</string>
    <string name="delete_list_forever_warning">This will delete the list and all the items it contains. Are you sure you want to delete this list ? (this can\'t be undone)</string>
    <string name="error_all_backup">An error occurred while processing backup.</string>
    <string name="error_could_not_fetch_some_lists">Some lists could not be loaded from your filesystem</string>
    <string name="error_deleting_file">Error while deleting file.</string>
    <string name="error_file_corrupted">File corrupted</string>
    <string name="error_file_missing">File missing</string>
    <string name="error_icon_content_description">Error</string>
    <string name="error_import_list">Error while importing your list : This file can\'t be imported.</string>
    <string name="error_permission_not_granted">Permission denied</string>
    <string name="error_unknown">Unknown Error</string>
    <string name="expand_button_title">Advanced</string>
    <string name="exposed_dropdown_menu_content_description">Show dropdown menu</string>
    <string name="file_deleted">File deleted.</string>
    <string name="files_default_empty_text">This folder\'s empty!</string>
    <string name="files_new_folder">New Folder…</string>
    <string name="files_new_folder_hint">New folder name</string>
    <string name="firebase_database_url">https://onelist-55a56.firebaseio.com</string>
    <string name="first_list_todo_one">Enjoy the app ! �� 100% FREE / 0 ads !</string>
    <string name="first_list_todo_title">��️ TODO</string>
    <string name="first_list_tuto_eight">�� Quickly add a comment by clicking the ⌄ button appearing under the Add edit box when you start typing !</string>
    <string name="first_list_tuto_eleven">Access the settings from the ⚙ button at the top of the screen</string>
    <string name="first_list_tuto_five">Add an item to the selected list with the top Add text box</string>
    <string name="first_list_tuto_four">Long click a list to move it or show its options (edit / delete)</string>
    <string name="first_list_tuto_nine">Show an item comments by clicking on the ⌄ button at the end of the line ---&gt; </string>
    <string name="first_list_tuto_nine_comment">Hello ��</string>
    <string name="first_list_tuto_one">Click on top right + to add a list</string>
    <string name="first_list_tuto_seven">Swipe an item right to edit it</string>
    <string name="first_list_tuto_six">Swipe an item left to delete it</string>
    <string name="first_list_tuto_ten">Mark item as done simply by clicking on it</string>
    <string name="first_list_tuto_ten_comment">And as undone by clicking on it again !</string>
    <string name="first_list_tuto_three">Switch lists by clicking on them</string>
    <string name="first_list_tuto_title">❓ Tutorial</string>
    <string name="first_list_tuto_two">You can import a list or chose its storage folder by clicking on more option in the list creation window</string>
    <string name="gcm_defaultSenderId">684266647785</string>
    <string name="google_api_key">AIzaSyB0vAGFrEJtafoWi8VycnMukMoyzs4wOoQ</string>
    <string name="google_app_id">1:684266647785:android:09537f212daaaee4</string>
    <string name="google_crash_reporting_api_key">AIzaSyB0vAGFrEJtafoWi8VycnMukMoyzs4wOoQ</string>
    <string name="google_storage_bucket">onelist-55a56.appspot.com</string>
    <string name="icon_content_description">Dialog Icon</string>
    <string name="in_progress">In progress</string>
    <string name="indeterminate">Partially checked</string>
    <string name="item_name">Item Name</string>
    <string name="list_created_with_onelist">List created with 1List.</string>
    <string name="list_default_name">My List</string>
    <string name="list_imported">Your list has been imported.</string>
    <string name="list_title">List name</string>
    <string name="mtrl_chip_close_icon_content_description">Remove %1$s</string>
    <string name="mtrl_picker_a11y_next_month">Change to next month</string>
    <string name="mtrl_picker_a11y_prev_month">Change to previous month</string>
    <string name="mtrl_picker_cancel">@android:string/cancel</string>
    <string name="mtrl_picker_confirm">@android:string/ok</string>
    <string name="mtrl_picker_day_of_week_column_header">Column of days: %1$s</string>
    <string name="mtrl_picker_navigate_to_year_description">Navigate to year %1$s</string>
    <string name="mtrl_picker_save">Save</string>
    <string name="mtrl_picker_toggle_to_calendar_input_mode">Switch to calendar input mode</string>
    <string name="mtrl_picker_toggle_to_day_selection">Tap to switch to selecting a day</string>
    <string name="mtrl_picker_toggle_to_text_input_mode">Switch to text input mode</string>
    <string name="mtrl_picker_toggle_to_year_selection">Tap to switch to selecting a year</string>
    <string name="navigation_menu">Navigation menu</string>
    <string name="not_selected">Not selected</string>
    <string name="not_set">Not set</string>
    <string name="off">Off</string>
    <string name="on">On</string>
    <string name="password_toggle_content_description">Show password</string>
    <string name="path_password_eye">M12,4.5C7,4.5 2.73,7.61 1,12c1.73,4.39 6,7.5 11,7.5s9.27,-3.11 11,-7.5c-1.73,-4.39 -6,-7.5 -11,-7.5zM12,17c-2.76,0 -5,-2.24 -5,-5s2.24,-5 5,-5 5,2.24 5,5 -2.24,5 -5,5zM12,9c-1.66,0 -3,1.34 -3,3s1.34,3 3,3 3,-1.34 3,-3 -1.34,-3 -3,-3z</string>
    <string name="path_password_eye_mask_strike_through">M2,4.27 L19.73,22 L22.27,19.46 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
    <string name="path_password_eye_mask_visible">M2,4.27 L2,4.27 L4.54,1.73 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
    <string name="path_password_strike_through">M3.27,4.27 L19.74,20.74</string>
    <string name="personalization">Personalization</string>
    <string name="preference_copied">\"%1$s\" copied to clipboard.</string>
    <string name="project_id">onelist-55a56</string>
    <string name="selected">Selected</string>
    <string name="setting_prefer_backup_files_summary">If enabled, your lists will be fetched from the backup files. This is useful if you sync your backup folder with other devices.</string>
    <string name="settings">Settings</string>
    <string name="settings_backup_all_summary">Each list is backed up every time you modify it. Click here to force a backup now.</string>
    <string name="settings_backup_select">Select a folder where your lists will be backed up</string>
    <string name="settings_backup_title">Backup lists on device</string>
    <string name="settings_error_try_switch_option">ⓘ Try disabling and then re-enabling this option.</string>
    <string name="settings_import_summary">Import a list from your filesystem (.1list file).\nIf the file is in your backup folder, the same file will be used for backups; if not, a new file will be created in your backup folder.</string>
    <string name="settings_import_title">Import a list</string>
    <string name="settings_prefer_backup_files_title">Get lists from backup files</string>
    <string name="settings_theme">Theme</string>
    <string name="settings_theme_auto">Auto (Android OS)</string>
    <string name="settings_theme_dark">Dark</string>
    <string name="settings_theme_dynamic">Dynamic (Based on your wallpaper)</string>
    <string name="settings_theme_light">Light</string>
    <string name="show_last_release_note">Show last release note</string>
    <string name="ss_missing_saf_activity_handler">Storage Access Framework is currently not available.</string>
    <string name="ss_please_grant_storage_permission">Please grant read and write permissions for external storage.</string>
    <string name="ss_please_select_base_path">Please select path: %s</string>
    <string name="ss_please_select_base_path_with_storage_type_primary">Please select internal storage with path: %s</string>
    <string name="ss_please_select_base_path_with_storage_type_sd_card">Please select SD card with path: %s</string>
    <string name="ss_please_select_root_storage_primary">To grant storage access, please firstly select root path of internal storage.</string>
    <string name="ss_please_select_root_storage_primary_with_location">To grant storage access, please firstly select root path of internal storage, located in %s</string>
    <string name="ss_please_select_root_storage_sdcard">To grant storage access, please firstly select root path of SD card.</string>
    <string name="ss_please_select_root_storage_sdcard_with_location">To grant storage access, please firstly select root path of SD card, located in %s</string>
    <string name="ss_selecting_root_path_success_with_open_folder_picker">Now you can select any folders under %s</string>
</resources>