<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory
        android:title="@string/personalization"
        android:key="cat_personalization">
        <DropDownPreference
            android:icon="@drawable/ic_settings_color_palette_24dp"
            android:entries="@array/theme_labels"
            android:title="Theme"
            android:key="theme"
            android:entryValues="@array/theme_values"
            app:useSimpleSummaryProvider="true"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:title="Backup"
        android:key="cat_backup">
        <SwitchPreference
            android:icon="@drawable/ic_settings_save_24dp"
            android:title="@string/settings_backup_title"
            android:key="storage"
            android:summary=""/>
        <Preference
            android:icon="@drawable/ic_settings_add_circle_outline_24dp"
            android:title="@string/settings_import_title"
            android:key="import"
            android:summary="@string/settings_import_summary"/>
        <SwitchPreference
            android:icon="@drawable/ic_settings_file_accent"
            android:title="@string/settings_prefer_backup_files_title"
            android:key="preferUseFiles"
            android:summary="@string/setting_prefer_backup_files_summary"/>
        <Preference
            android:title="@string/backup_all_lists"
            android:key="backup_all"
            android:summary="@string/settings_backup_all_summary"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/about"
        android:key="cat_about">
        <Preference
            android:title="@string/app_version"
            android:selectable="true"
            android:key="version"/>
        <Preference
            android:title="@string/show_last_release_note"
            android:selectable="true"
            android:key="releaseNote"/>
    </PreferenceCategory>
</PreferenceScreen>
